--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,26 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    current_favorite  fan_count\n",
-      "0         Tony Stark       2517\n",
-      "1  Sabrina Carpenter       2444\n",
-      "2         Snoop Dogg       2521\n",
-      "3       LeBron James       2518\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2528\n",
+      "1  Sabrina Carpenter       2457\n",
+      "2         Snoop Dogg       2488\n",
+      "3       LeBron James       2527\n"
      ]
     },
     {
@@ -75,10 +75,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2517\n",
-      "1  Sabrina Carpenter       2444\n",
-      "2         Snoop Dogg       2521\n",
-      "3       LeBron James       2518\n"
+      "0         Tony Stark       2505\n",
+      "1  Sabrina Carpenter       2459\n",
+      "2         Snoop Dogg       2529\n",
+      "3       LeBron James       2507\n"
      ]
     },
     {
@@ -103,10 +103,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2517\n",
-      "1  Sabrina Carpenter       2444\n",
-      "2         Snoop Dogg       2521\n",
-      "3       LeBron James       2518\n"
+      "0         Tony Stark       2514\n",
+      "1  Sabrina Carpenter       2479\n",
+      "2         Snoop Dogg       2507\n",
+      "3       LeBron James       2500\n"
      ]
     },
     {
@@ -131,10 +131,346 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2517\n",
-      "1  Sabrina Carpenter       2444\n",
-      "2         Snoop Dogg       2521\n",
-      "3       LeBron James       2518\n"
+      "0         Tony Stark       2514\n",
+      "1  Sabrina Carpenter       2479\n",
+      "2         Snoop Dogg       2507\n",
+      "3       LeBron James       2500\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2518\n",
+      "1  Sabrina Carpenter       2464\n",
+      "2         Snoop Dogg       2502\n",
+      "3       LeBron James       2516\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2518\n",
+      "1  Sabrina Carpenter       2464\n",
+      "2         Snoop Dogg       2502\n",
+      "3       LeBron James       2516\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0       LeBron James       2492\n",
+      "1         Tony Stark       2498\n",
+      "2  Sabrina Carpenter       2483\n",
+      "3         Snoop Dogg       2527\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0       LeBron James       2500\n",
+      "1         Tony Stark       2471\n",
+      "2  Sabrina Carpenter       2491\n",
+      "3         Snoop Dogg       2538\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0       LeBron James       2508\n",
+      "1         Tony Stark       2477\n",
+      "2  Sabrina Carpenter       2462\n",
+      "3         Snoop Dogg       2553\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0       LeBron James       2508\n",
+      "1         Tony Stark       2477\n",
+      "2  Sabrina Carpenter       2462\n",
+      "3         Snoop Dogg       2553\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0       LeBron James       2595\n",
+      "1         Tony Stark       2566\n",
+      "2  Sabrina Carpenter       2215\n",
+      "3         Snoop Dogg       2624\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0       LeBron James       2595\n",
+      "1         Tony Stark       2566\n",
+      "2  Sabrina Carpenter       2215\n",
+      "3         Snoop Dogg       2624\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2571\n",
+      "1         Snoop Dogg       2619\n",
+      "2  Sabrina Carpenter       2222\n",
+      "3       LeBron James       2588\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2529\n",
+      "1         Snoop Dogg       2550\n",
+      "2  Sabrina Carpenter       2311\n",
+      "3       LeBron James       2610\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2497\n",
+      "1         Snoop Dogg       2542\n",
+      "2  Sabrina Carpenter       2395\n",
+      "3       LeBron James       2566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, con=connection)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2470\n",
+      "1         Snoop Dogg       2504\n",
+      "2  Sabrina Carpenter       2486\n",
+      "3       LeBron James       2540\n"
      ]
     },
     {
