--- a/test.ipynb
+++ b/test.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mysql.connector\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display, clear_output\n",
     "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from flask import Flask\n",
+    "from Website.models import db, UserDynamicPreferences  # Import your SQLAlchemy models\n",
+    "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
-    "import os\n",
-    "from sqlalchemy import create_engine"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +26,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,26 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2528\n",
-      "1  Sabrina Carpenter       2457\n",
-      "2         Snoop Dogg       2488\n",
-      "3       LeBron James       2527\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -75,18 +66,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2505\n",
-      "1  Sabrina Carpenter       2459\n",
-      "2         Snoop Dogg       2529\n",
-      "3       LeBron James       2507\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -103,18 +86,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2514\n",
-      "1  Sabrina Carpenter       2479\n",
-      "2         Snoop Dogg       2507\n",
-      "3       LeBron James       2500\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -131,18 +106,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2514\n",
-      "1  Sabrina Carpenter       2479\n",
-      "2         Snoop Dogg       2507\n",
-      "3       LeBron James       2500\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -159,18 +126,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2518\n",
-      "1  Sabrina Carpenter       2464\n",
-      "2         Snoop Dogg       2502\n",
-      "3       LeBron James       2516\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -187,18 +146,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2518\n",
-      "1  Sabrina Carpenter       2464\n",
-      "2         Snoop Dogg       2502\n",
-      "3       LeBron James       2516\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -215,18 +166,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0       LeBron James       2492\n",
-      "1         Tony Stark       2498\n",
-      "2  Sabrina Carpenter       2483\n",
-      "3         Snoop Dogg       2527\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -243,18 +186,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0       LeBron James       2500\n",
-      "1         Tony Stark       2471\n",
-      "2  Sabrina Carpenter       2491\n",
-      "3         Snoop Dogg       2538\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -271,18 +206,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0       LeBron James       2508\n",
-      "1         Tony Stark       2477\n",
-      "2  Sabrina Carpenter       2462\n",
-      "3         Snoop Dogg       2553\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -299,18 +226,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0       LeBron James       2508\n",
-      "1         Tony Stark       2477\n",
-      "2  Sabrina Carpenter       2462\n",
-      "3         Snoop Dogg       2553\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -327,18 +246,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0       LeBron James       2595\n",
-      "1         Tony Stark       2566\n",
-      "2  Sabrina Carpenter       2215\n",
-      "3         Snoop Dogg       2624\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -355,18 +266,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0       LeBron James       2595\n",
-      "1         Tony Stark       2566\n",
-      "2  Sabrina Carpenter       2215\n",
-      "3         Snoop Dogg       2624\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -383,18 +286,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2571\n",
-      "1         Snoop Dogg       2619\n",
-      "2  Sabrina Carpenter       2222\n",
-      "3       LeBron James       2588\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -411,74 +306,10 @@
      "output_type": "stream",
      "text": [
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2529\n",
-      "1         Snoop Dogg       2550\n",
-      "2  Sabrina Carpenter       2311\n",
-      "3       LeBron James       2610\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    current_favorite  fan_count\n",
-      "0         Tony Stark       2497\n",
-      "1         Snoop Dogg       2542\n",
-      "2  Sabrina Carpenter       2395\n",
-      "3       LeBron James       2566\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    current_favorite  fan_count\n",
-      "0         Tony Stark       2470\n",
-      "1         Snoop Dogg       2504\n",
-      "2  Sabrina Carpenter       2486\n",
-      "3       LeBron James       2540\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/20/24nsj1xx7y52k8m90_h_2r5h0000gp/T/ipykernel_29670/2020191663.py:19: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, con=connection)\n"
+      "0         Tony Stark       2483\n",
+      "1  Sabrina Carpenter       2379\n",
+      "2       LeBron James       2522\n",
+      "3         Snoop Dogg       2616\n"
      ]
     },
     {
@@ -500,25 +331,21 @@
    ],
    "source": [
     "\n",
-    "# Function to create a raw MySQL connection\n",
-    "def create_connection():\n",
-    "    connection = mysql.connector.connect(\n",
-    "        host=os.getenv('DB_HOST'),\n",
-    "        user=os.getenv('DB_USER'),\n",
-    "        password=os.getenv('DB_PASSWORD'),\n",
-    "        database=os.getenv('DB_NAME')\n",
-    "    )\n",
-    "    return connection\n",
     "\n",
-    "# Function to retrieve the fan count for each celebrity\n",
-    "def get_fan_counts(connection):\n",
-    "    query = \"\"\"\n",
-    "    SELECT current_favorite, COUNT(*) as fan_count \n",
-    "    FROM user_dynamic_preferences \n",
-    "    GROUP BY current_favorite;\n",
-    "    \"\"\"\n",
-    "    # Use the raw MySQL connection to fetch the data\n",
-    "    df = pd.read_sql(query, con=connection)\n",
+    "app = Flask(__name__)\n",
+    "app.config['SQLALCHEMY_DATABASE_URI'] = os.getenv('DATABASE_URL')\n",
+    "app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False\n",
+    "db.init_app(app)\n",
+    "\n",
+    "# Function to retrieve the fan count for each celebrity using SQLAlchemy\n",
+    "def get_fan_counts():\n",
+    "    # Query the database for fan counts grouped by current_favorite\n",
+    "    fan_counts = db.session.query(\n",
+    "        UserDynamicPreferences.current_favorite, db.func.count(UserDynamicPreferences.user_id).label('fan_count')\n",
+    "    ).group_by(UserDynamicPreferences.current_favorite).all()\n",
+    "\n",
+    "    # Convert the results to a pandas DataFrame for easier manipulation\n",
+    "    df = pd.DataFrame(fan_counts, columns=['current_favorite', 'fan_count'])\n",
     "    return df\n",
     "\n",
     "# Function to display real-time updating line plot\n",
@@ -550,14 +377,13 @@
     "            current_time = time.time() - start_time\n",
     "            time_data.append(current_time)\n",
     "\n",
-    "            # Fetch the latest fan counts\n",
-    "            connection = create_connection()\n",
-    "            df = get_fan_counts(connection)\n",
-    "            connection.close()\n",
+    "            # Fetch the latest fan counts using SQLAlchemy\n",
+    "            df = get_fan_counts()\n",
     "\n",
     "            print(df)  # Debugging: Print the DataFrame to see if it updates\n",
     "\n",
     "            for celebrity in fan_counts_data.keys():\n",
+    "                # Check if the celebrity exists in the DataFrame, and sum the fan count\n",
     "                fan_count = df[df['current_favorite'] == celebrity]['fan_count'].sum() if not df[df['current_favorite'] == celebrity].empty else 0\n",
     "                fan_counts_data[celebrity].append(fan_count)\n",
     "\n",
@@ -578,7 +404,9 @@
     "        plt.show()\n",
     "\n",
     "# Main script\n",
-    "display_real_time_plot(refresh_interval=5)  # Update every 5 seconds\n"
+    "if __name__ == \"__main__\":\n",
+    "    with app.app_context():  # Ensure Flask app context is available\n",
+    "        display_real_time_plot(refresh_interval=5)  # Update every 5 seconds\n"
    ]
   }
  ],
