--- a/test.ipynb
+++ b/test.ipynb
@@ -63,49 +63,49 @@
     }
    ],
    "source": [
-    "# Function to create a raw MySQL connection\n",
-    "def create_connection():\n",
-    "    connection = mysql.connector.connect(\n",
-    "        host=os.getenv('DB_HOST'),\n",
-    "        user=os.getenv('DB_USER'),\n",
-    "        password=os.getenv('DB_PASSWORD'),\n",
-    "        database=os.getenv('DB_NAME')\n",
-    "    )\n",
-    "    return connection\n",
+    "import os\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output, display\n",
+    "from dotenv import load_dotenv\n",
+    "from log_significant_events import create_connection, get_recent_significant_events\n",
     "\n",
-    "# Function to retrieve the fan count for each celebrity\n",
+    "load_dotenv()\n",
+    "\n",
     "def get_fan_counts(connection):\n",
     "    query = \"\"\"\n",
     "    SELECT current_favorite, COUNT(*) as fan_count \n",
     "    FROM user_dynamic_preferences \n",
     "    GROUP BY current_favorite;\n",
     "    \"\"\"\n",
-    "    # Use the raw MySQL connection to fetch the data\n",
     "    df = pd.read_sql(query, con=connection)\n",
     "    return df\n",
     "\n",
-    "# Function to display real-time updating line plot\n",
     "def display_real_time_plot(connection, refresh_interval=5):\n",
-    "    plt.ion()  # Turn on interactive mode\n",
-    "    fig, ax = plt.subplots()\n",
+    "    plt.ion()\n",
+    "    fig = plt.figure(figsize=(15, 10))\n",
+    "    \n",
+    "    # Fan count plot\n",
+    "    ax1 = fig.add_subplot(211)\n",
+    "    ax1.set_xlabel('Time (seconds)')\n",
+    "    ax1.set_ylabel('Number of Fans')\n",
+    "    ax1.set_title('Real-Time Fan Count of Celebrities')\n",
+    "    ax1.set_ylim(0, 6000)\n",
+    "    ax1.set_xlim(0, 100)\n",
     "\n",
-    "    # Initialize the plot\n",
-    "    ax.set_xlabel('Time (seconds)')\n",
-    "    ax.set_ylabel('Number of Fans')\n",
-    "    ax.set_title('Real-Time Fan Count of Celebrities')\n",
-    "    ax.set_ylim(0, 6000)  # Adjust according to expected fan counts\n",
-    "    ax.set_xlim(0, 1000)\n",
+    "    # Significant events table\n",
+    "    ax2 = fig.add_subplot(212)\n",
+    "    ax2.axis('off')\n",
     "\n",
-    "    # To track data over time\n",
     "    time_data = []\n",
     "    fan_counts_data = {celebrity: [] for celebrity in ['Sabrina Carpenter', 'Snoop Dogg', 'Tony Stark', 'LeBron James']}\n",
     "\n",
-    "    # Initialize empty plot lines for each celebrity\n",
     "    lines = {}\n",
     "    for celebrity in fan_counts_data.keys():\n",
-    "        lines[celebrity], = ax.plot([], [], label=celebrity)\n",
+    "        lines[celebrity], = ax1.plot([], [], label=celebrity)\n",
     "\n",
-    "    ax.legend(loc='upper left')\n",
+    "    ax1.legend(loc='upper left')\n",
     "\n",
     "    try:\n",
     "        start_time = time.time()\n",
@@ -114,39 +114,52 @@
     "            time_data.append(current_time)\n",
     "\n",
     "            # Fetch the latest fan counts\n",
-    "            \n",
     "            df = get_fan_counts(connection)\n",
     "            for celebrity in fan_counts_data.keys():\n",
     "                fan_count = df[df['current_favorite'] == celebrity]['fan_count'].sum() if not df[df['current_favorite'] == celebrity].empty else 0\n",
     "                fan_counts_data[celebrity].append(fan_count)\n",
     "\n",
+    "            # Fetch recent significant events\n",
+    "            events_df = get_recent_significant_events(connection)\n",
+    "\n",
     "            clear_output(wait=True)\n",
     "\n",
-    "            \n",
-    "            ax.clear()\n",
-    "            ax.set_xlabel('Time (seconds)')\n",
-    "            ax.set_ylabel('Number of Fans')\n",
-    "            ax.set_title('Real-Time Fan Count of Celebrities')\n",
-    "            ax.set_ylim(0, 6000)\n",
-    "            ax.set_xlim(0, 100)\n",
+    "            # Update fan count plot\n",
+    "            ax1.clear()\n",
+    "            ax1.set_xlabel('Time (seconds)')\n",
+    "            ax1.set_ylabel('Number of Fans')\n",
+    "            ax1.set_title('Real-Time Fan Count of Celebrities')\n",
+    "            ax1.set_ylim(0, 6000)\n",
+    "            ax1.set_xlim(0, 100)\n",
     "\n",
     "            for celebrity, fan_counts in fan_counts_data.items():\n",
-    "                ax.plot(time_data, fan_counts, label=celebrity)\n",
-    "            ax.legend(loc='upper left')\n",
+    "                ax1.plot(time_data, fan_counts, label=celebrity)\n",
+    "            ax1.legend(loc='upper left')\n",
+    "\n",
+    "            # Update significant events table\n",
+    "            ax2.clear()\n",
+    "            ax2.axis('off')\n",
+    "            table = ax2.table(cellText=events_df.values, colLabels=events_df.columns, loc='center')\n",
+    "            table.auto_set_font_size(False)\n",
+    "            table.set_fontsize(9)\n",
+    "            table.scale(1.2, 1.5)\n",
+    "            ax2.set_title('Recent Significant Events')\n",
+    "\n",
+    "            plt.tight_layout()\n",
     "            display(fig)\n",
     "\n",
     "            plt.pause(0.1)\n",
     "\n",
     "            time.sleep(refresh_interval)\n",
     "    except KeyboardInterrupt:\n",
-    "        print(\"Real-time plot update interrupted.\")\n",
+    "        print(\"Real-time visualization interrupted.\")\n",
     "    finally:\n",
     "        plt.ioff()\n",
     "        plt.show()\n",
     "\n",
-    "# Main script\n",
-    "connection = create_connection()\n",
-    "display_real_time_plot(connection, refresh_interval=5)  # Update every 5 seconds\n"
+    "if __name__ == \"__main__\":\n",
+    "    connection = create_connection()\n",
+    "    display_real_time_plot(connection, refresh_interval=5)  # Update every 5 seconds"
    ]
   },
   {
