--- a/test.ipynb
+++ b/test.ipynb
@@ -7,13 +7,11 @@
    "outputs": [],
    "source": [
     "from flask import Flask\n",
-    "from flask_sqlalchemy import SQLAlchemy\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
-    "from IPython.display import clear_output, display\n",
     "from dotenv import load_dotenv\n",
-    "from Website.models import UserDefaultSettings, UserDynamicPreferences, db\n",
+    "from Website.models import UserDynamicPreferences, db\n",
     "import os\n",
     "\n",
     "\n"
