Final Spark Log Dashboard

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -20,7 +22,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x149e26b40>"
+       "<IPython.lib.display.IFrame at 0x122968ef0>"
       ]
      },
      "metadata": {},
