--- a/test.ipynb
+++ b/test.ipynb
@@ -96,15 +96,15 @@
      "text": [
       "Query Result:\n",
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2496\n",
-      "1  Sabrina Carpenter       2426\n",
-      "2         Snoop Dogg       2573\n",
-      "3       LeBron James       2505\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2496\n",
-      "1  Sabrina Carpenter       2426\n",
-      "2         Snoop Dogg       2573\n",
-      "3       LeBron James       2505\n"
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n"
      ]
     },
     {
@@ -144,26 +144,59 @@
      "text": [
       "Query Result:\n",
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2496\n",
-      "1  Sabrina Carpenter       2426\n",
-      "2         Snoop Dogg       2573\n",
-      "3       LeBron James       2505\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2496\n",
-      "1  Sabrina Carpenter       2426\n",
-      "2         Snoop Dogg       2573\n",
-      "3       LeBron James       2505\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
       "Query Result:\n",
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2496\n",
-      "1  Sabrina Carpenter       2426\n",
-      "2         Snoop Dogg       2573\n",
-      "3       LeBron James       2505\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
       "    current_favorite  fan_count\n",
-      "0         Tony Stark       2496\n",
-      "1  Sabrina Carpenter       2426\n",
-      "2         Snoop Dogg       2573\n",
-      "3       LeBron James       2505\n"
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
+      "Query Result:\n",
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
+      "Query Result:\n",
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
+      "Query Result:\n",
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n",
+      "    current_favorite  fan_count\n",
+      "0         Tony Stark       2576\n",
+      "1  Sabrina Carpenter       2411\n",
+      "2         Snoop Dogg       2525\n",
+      "3       LeBron James       2488\n"
      ]
     }
    ],
